--- a/common/etc/Makefile.common
+++ b/common/etc/Makefile.common
@@ -20,6 +20,9 @@ create-var:
 
 populate-depends: 
 	@echo ${DEPEND}
+	if ( test ! -d ${PREFIX}/contrib ); then \
+	  mkdir ${PREFIX}/contrib; \
+	fi
 	cp Dependencies contrib/Dependencies
 	$(MAKE) manifest >> $(LOG) 2>&1
 
