committing changes made so far in upgrading to Jetty 9.4

--- a/common/etc/log4j.properties
+++ b/common/etc/log4j.properties
@@ -25,7 +25,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p [%t] %c{1}:%L - 
 #----------------------------------------------------- 
 log4j.rootLogger=info, stdout
 log4j.logger.edu.sdsc.inca=info
-log4j.logger.org.mortbay.jetty.context./=info
+log4j.logger.org.eclipse.jetty.webapp./=info
 
 #----------------------------------------------------- 
 # libraries that Inca uses
@@ -35,7 +35,7 @@ log4j.logger.org.globus=error
 log4j.logger.com.sshtools.j2ssh=error
 log4j.logger.COM.claymoresystems.ptls.SSLDebug=OFF
 log4j.logger.org.hibernate=error
-log4j.logger.org.mortbay=error
+log4j.logger.org.eclipse.jetty=error
 
 #----------------------------------------------------- 
 # fine grain hibernate logging options
