--- a/consumers/etc/realm.properties
+++ b/consumers/etc/realm.properties
@@ -6,10 +6,10 @@
 #  <username>: <password>
 #
 # Passwords may be clear text, obfuscated or checksummed.  The class 
-# org.mortbay.util.Password should be used to generate obfuscated
+# org.eclipse.jetty.util.security.Password should be used to generate obfuscated
 # passwords or password checksums
 # 
-#  java -classpath lib/org.mortbay.jetty-5.1.10.jar:lib/commons-logging-1.0.4.jar org.mortbay.util.Password <password>
+#  java -classpath lib/jetty-util-9.4.11.v20180605.jar org.eclipse.jetty.util.security.Password <password>
 #
 #
 
