added a configuration file for HikariCP

--- a/depot/etc/hibernate.properties
+++ b/depot/etc/hibernate.properties
@@ -28,13 +28,13 @@ hibernate.connection.password=
 # hibernate.connection.password=test
 
 # Use the C3P0 connection pool.
-hibernate.c3p0.min_size=3
-hibernate.c3p0.max_size=30
-hibernate.c3p0.timeout=1800
-hibernate.c3p0.max_statements=50
+#hibernate.c3p0.min_size=3
+#hibernate.c3p0.max_size=30
+#hibernate.c3p0.timeout=1800
+#hibernate.c3p0.max_statements=50
 
 # Use the Hibernate built-in pool for tests.
-hibernate.connection.pool_size=1
+#hibernate.connection.pool_size=1
 
 # Use EHCache but not the query cache.
 #hibernate.cache.provider_class=net.sf.ehcache.hibernate.Provider
@@ -43,4 +43,3 @@ hibernate.connection.pool_size=1
 
 # Print SQL to stdout.
 hibernate.show_sql=false
-
